view more overflowing fix #286

--- a/assets/styles/rsbv.css
+++ b/assets/styles/rsbv.css
@@ -136,7 +136,7 @@
 }
 
 #rsbv .rsbv-viewmore-panel .panel-default {
-  width: 116%;
+  width: 115%;
   box-shadow: none;
   border-bottom: 1px solid white;
   border-left: 1px solid #e6e6e6;
